// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SimpleTable Datum 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 250px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="4"
        aria-rowcount="3"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Status
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Age
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Long Field Name
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Getter 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 250px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="5"
        aria-rowcount="3"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Status
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Age
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Long Field Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Number
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Label Search 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <h1
          class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
        >
          Test
        </h1>
        <div
          class="MuiBox-root MuiBox-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-end MuiGrid-justify-content-xs-flex-end"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                aria-expanded="false"
                class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                role="combobox"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    style="margin-top: 0px;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                      data-shrink="true"
                      for="namespaces-filter"
                      id="namespaces-filter-label"
                    >
                      Namespaces
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                        id="namespaces-filter"
                        placeholder="Filter"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiFormControl-root MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled MuiFormLabel-focused MuiInputLabel-focused"
                  data-shrink="true"
                  for="standard-search"
                  id="standard-search-label"
                >
                  Search
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-focused MuiInput-focused MuiInputBase-formControl MuiInput-formControl"
                  role="search"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                    id="standard-search"
                    placeholder="Filter"
                    type="search"
                    value="mylabel"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                aria-controls="standard-search"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Clear
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <span />
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 180px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="4"
        aria-rowcount="2"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Namespace
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              UID
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Labels
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Name Search 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <h1
          class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
        >
          Test
        </h1>
        <div
          class="MuiBox-root MuiBox-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-end MuiGrid-justify-content-xs-flex-end"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                aria-expanded="false"
                class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                role="combobox"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    style="margin-top: 0px;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                      data-shrink="true"
                      for="namespaces-filter"
                      id="namespaces-filter-label"
                    >
                      Namespaces
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                        id="namespaces-filter"
                        placeholder="Filter"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiFormControl-root MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled MuiFormLabel-focused MuiInputLabel-focused"
                  data-shrink="true"
                  for="standard-search"
                  id="standard-search-label"
                >
                  Search
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-focused MuiInput-focused MuiInputBase-formControl MuiInput-formControl"
                  role="search"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                    id="standard-search"
                    placeholder="Filter"
                    type="search"
                    value="phonyresources2"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                aria-controls="standard-search"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Clear
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <span />
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 120px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="4"
        aria-rowcount="1"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Namespace
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              UID
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Labels
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Namespace Search 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <h1
          class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
        >
          Test
        </h1>
        <div
          class="MuiBox-root MuiBox-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-end MuiGrid-justify-content-xs-flex-end"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                aria-expanded="false"
                class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                role="combobox"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    style="margin-top: 0px;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                      data-shrink="true"
                      for="namespaces-filter"
                      id="namespaces-filter-label"
                    >
                      Namespaces
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                        id="namespaces-filter"
                        placeholder="Filter"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiFormControl-root MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled MuiFormLabel-focused MuiInputLabel-focused"
                  data-shrink="true"
                  for="standard-search"
                  id="standard-search-label"
                >
                  Search
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-focused MuiInput-focused MuiInputBase-formControl MuiInput-formControl"
                  role="search"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                    id="standard-search"
                    placeholder="Filter"
                    type="search"
                    value="MyNamespace3"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                aria-controls="standard-search"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Clear
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <span />
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 120px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="4"
        aria-rowcount="1"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Namespace
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              UID
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Labels
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Namespace Select 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <h1
          class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
        >
          Test
        </h1>
        <div
          class="MuiBox-root MuiBox-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-end MuiGrid-justify-content-xs-flex-end"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                aria-expanded="false"
                class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                role="combobox"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    style="margin-top: 0px;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                      data-shrink="true"
                      for="namespaces-filter"
                      id="namespaces-filter-label"
                    >
                      Namespaces
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart MuiInputBase-adornedEnd"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                        style="overflow-wrap: anywhere;"
                      >
                        MyNamespace1
                        <span>
                          , 
                        </span>
                        <b>
                          +1
                        </b>
                      </p>
                      <input
                        aria-autocomplete="both"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd"
                        id="namespaces-filter"
                        placeholder=""
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator MuiAutocomplete-clearIndicatorDirty"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiFormControl-root MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-focused MuiInputLabel-focused"
                  data-shrink="true"
                  for="standard-search"
                  id="standard-search-label"
                >
                  Search
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-focused MuiInput-focused MuiInputBase-formControl MuiInput-formControl"
                  role="search"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                    id="standard-search"
                    placeholder="Filter"
                    type="search"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                aria-controls="standard-search"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Clear
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <span />
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 180px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="4"
        aria-rowcount="2"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Namespace
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              UID
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Labels
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Number Search 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <h1
          class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
        >
          Test
        </h1>
        <div
          class="MuiBox-root MuiBox-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-end MuiGrid-justify-content-xs-flex-end"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                aria-expanded="false"
                class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                role="combobox"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    style="margin-top: 0px;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                      data-shrink="true"
                      for="namespaces-filter"
                      id="namespaces-filter-label"
                    >
                      Namespaces
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                        id="namespaces-filter"
                        placeholder="Filter"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiFormControl-root MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled MuiFormLabel-focused MuiInputLabel-focused"
                  data-shrink="true"
                  for="standard-search"
                  id="standard-search-label"
                >
                  Search
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-focused MuiInput-focused MuiInputBase-formControl MuiInput-formControl"
                  role="search"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                    id="standard-search"
                    placeholder="Filter"
                    type="search"
                    value="30"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                aria-controls="standard-search"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Clear
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <span />
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 120px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="3"
        aria-rowcount="1"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Namespace
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Number
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Reflect In URL 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Test changing the page and rows per page.
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      <b>
        Current URL search:
      </b>
       
      ?p=2
    </p>
    <div
      class="MuiBox-root MuiBox-root"
      style="display: inline-block !important; height: 60vh;"
    >
      <div
        style="overflow: visible; height: 0px; width: 0px;"
      >
        <div
          aria-colcount="3"
          aria-rowcount="5"
          class="ReactVirtualized__Table makeStyles-table"
          role="grid"
        >
          <div
            class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
            role="row"
            style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
          >
            <div
              class="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style="flex: 0 1 50px;"
            >
              <div
                class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                role="cell"
                style="text-align: left;"
              >
                Name
              </div>
            </div>
            <div
              class="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style="flex: 0 1 50px;"
            >
              <div
                class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                role="cell"
                style="text-align: left;"
              >
                Namespace
              </div>
            </div>
            <div
              class="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style="flex: 0 1 50px;"
            >
              <div
                class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                role="cell"
                style="text-align: left;"
              >
                Number
              </div>
            </div>
          </div>
          <div
            aria-label="grid"
            class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
            role="rowgroup"
            style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
            tabindex="0"
          />
        </div>
      </div>
      <div
        class="resize-triggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Reflect In URL With Prefix 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Test changing the page and rows per page.
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      <b>
        Current URL search:
      </b>
       
      ?p=2
    </p>
    <div
      class="MuiBox-root MuiBox-root"
      style="display: inline-block !important; height: 60vh;"
    >
      <div
        style="overflow: visible; height: 0px; width: 0px;"
      >
        <div
          aria-colcount="3"
          aria-rowcount="5"
          class="ReactVirtualized__Table makeStyles-table"
          role="grid"
        >
          <div
            class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
            role="row"
            style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
          >
            <div
              class="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style="flex: 0 1 50px;"
            >
              <div
                class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                role="cell"
                style="text-align: left;"
              >
                Name
              </div>
            </div>
            <div
              class="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style="flex: 0 1 50px;"
            >
              <div
                class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                role="cell"
                style="text-align: left;"
              >
                Namespace
              </div>
            </div>
            <div
              class="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style="flex: 0 1 50px;"
            >
              <div
                class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                role="cell"
                style="text-align: left;"
              >
                Number
              </div>
            </div>
          </div>
          <div
            aria-label="grid"
            class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
            role="rowgroup"
            style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
            tabindex="0"
          />
        </div>
      </div>
      <div
        class="resize-triggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Simple Table Template With Default Sorting Column 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 250px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="5"
        aria-rowcount="3"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Status
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Age
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Long Field Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Number
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Simple Table Template With Empty Message 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
    >
      No data
    </p>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Simple Table Template With Error 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 250px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="5"
        aria-rowcount="3"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Status
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Age
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Long Field Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Number
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Simple Table Template With Rows Per Page Option 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 250px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="5"
        aria-rowcount="3"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Status
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Age
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Long Field Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Number
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots SimpleTable UID Search 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <h1
          class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
        >
          Test
        </h1>
        <div
          class="MuiBox-root MuiBox-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-end MuiGrid-justify-content-xs-flex-end"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                aria-expanded="false"
                class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                role="combobox"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    style="margin-top: 0px;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                      data-shrink="true"
                      for="namespaces-filter"
                      id="namespaces-filter-label"
                    >
                      Namespaces
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                        id="namespaces-filter"
                        placeholder="Filter"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiFormControl-root MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled MuiFormLabel-focused MuiInputLabel-focused"
                  data-shrink="true"
                  for="standard-search"
                  id="standard-search-label"
                >
                  Search
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-focused MuiInput-focused MuiInputBase-formControl MuiInput-formControl"
                  role="search"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                    id="standard-search"
                    placeholder="Filter"
                    type="search"
                    value="phony0"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                aria-controls="standard-search"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Clear
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <span />
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 120px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="4"
        aria-rowcount="1"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Name
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Namespace
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              UID
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
              role="cell"
              style="text-align: left;"
            >
              Labels
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;
